--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,11 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  flutter_map: ^6.1.0
+  geolocator: ^10.1.0
+  sensors_plus: ^4.0.2
+  latlong2: ^0.9.0
+  url_launcher: ^6.2.3
 
 dev_dependencies:
   flutter_test:
