--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,10 @@ dependencies:
   sensors_plus: ^4.0.2
   latlong2: ^0.9.0
   url_launcher: ^6.2.3
+  rxdart: ^0.27.7
+  geocoding: ^2.1.1
+  flutter_compass: ^0.8.0
+  flutter_bloc: ^8.1.3
 
 dev_dependencies:
   flutter_test:
