--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,8 @@ dependencies:
   get_it: ^7.6.6
   json_annotation: ^4.8.1
   injectable: ^2.3.2
+  freezed: ^2.4.6
+  freezed_annotation: ^2.4.1
 
 dev_dependencies:
   flutter_test:
